springboot-mongodb-devops/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-microservice
  labels:
    name: devops-microservice
---
